# OpenSim_Models

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SPEC.md  SPEC.md.patch  conftest.py  docker-compose.yml  fix.diff  fix_mypy.py  model_pack.yaml  mypy2.txt  os_issues.json  patch.diff  patch_ci.diff  patch_spec.py  pyproject.toml  test_runner_check.py  update_spec.py  update_version.py
.gaai/: contexts  rules  scripts  workflows
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: Jules-Redundant-Issue-Closer.yml  Jules-Redundant-PR-Closer.yml  Verify-Issue-Closure.yml  anti-phantom-merge.yml  ci-standard.yml  ci-standard.yml.orig  local-only-runner-guard.yml  spec-check.yml
.hypothesis/constants/: 026a503e1b37e9e2  039495bd6e0b50f4  08d19e98e031ec62  1fad596f06efd8db  2453148fa0005466  2b45db7e44235af9  34f129c887094581  3cac4214e7e19fc5  3cc0a2ec6439dbc0  5010ac5967ba7f5d  5da442dcba608df3  636d82be180942d9  67574e43f5f5ffed  6c1b8ba3b3c42117  7072acf6d13515a7  79cf7cb22a518d3c  7ea8fd61f0101396  7f4780ba6de02de4  7fe22d7fd5714c5e  80dac8f08c39ce43  88d69d84449743f6  88e4c567dc2bc0fb  8df117e94cb13550  967a417d1f2e1f38  a387a88a098cd91d  a98598e1a1f0a376  adc60d50a7e4c99a  b17e70a81fc8397f  b22ad3cbb0b705d7  c27b85bc18323f8d  c44f4be7156e6abc  c4ad3cf96512f0ef  c82e45e80715f7e4  cd8839b2af10e501  cec3ad28989d6abd  d2a2b8818a887de6  e0926fc3d7a7d81b  eac60c8cf90df501  f8e74e9dfa637dcf  fcc273a95ab82a21  (+1 more)
.jules/: bolt.md
assessments/: 2026-04-26-A-project-organization.md  2026-04-26-B-documentation.md  2026-04-26-C-code-quality.md  2026-04-26-D-testing.md  2026-04-26-E-ci-cd.md  2026-04-26-F-security.md  2026-04-26-G-dependencies.md  2026-04-26-H-performance.md  2026-04-26-I-accessibility.md  2026-04-26-J-internationalization.md  2026-04-26-K-observability.md  2026-04-26-L-maintainability.md  2026-04-26-M-data-handling.md  2026-04-26-N-api-interface-design.md  2026-04-26-O-agentic-usability.md  2026-04-26-OpenSim_Models-assessment.json  2026-04-26-comprehensive-assessment.json  2026-05-07-A-project-organization.md  2026-05-07-B-documentation.md  2026-05-07-C-testing.md  2026-05-07-D-error-handling.md  2026-05-07-E-performance.md  2026-05-07-F-code-quality.md  2026-05-07-G-dependency-hygiene.md  2026-05-07-H-security.md  2026-05-07-I-configuration-management.md  2026-05-07-J-observability.md  2026-05-07-K-maintenance-debt.md  2026-05-07-L-ci-cd.md  2026-05-07-M-deployment.md  2026-05-07-N-legal-and-compliance.md  2026-05-07-O-agentic-usability.md  2026-05-07-comprehensive-assessment.json  2026-05-07-comprehensive-assessment.md  created_issues.json  evidence.json
benchmarks/: .gitkeep  README.md
deploy/: README.md
docs/: README.md
docs/adr/: README.md
docs/architecture/: deep_traversal_audit.md
docs/assessments/: 2026-04-26-a-o-assessment.json  2026-04-26-a-o-assessment.md  A-N_Assessment_2026-04-02.md  A-N_Assessment_2026-04-04.md  A-N_Assessment_2026-04-09.md  A-N_Assessment_2026-04-10.md  A-N_Assessment_2026-04-11.md  A-N_Assessment_2026-04-14.md  A-N_Assessment_2026-04-17.md  A-N_Assessment_2026-04-19.md  A-N_Assessment_2026-04-20.md  A-N_Assessment_2026-04-21.md  A-N_Assessment_2026-04-22.md  assessment_summary.json  initial_assessment.md
examples/: generate_all_models.py
rust_core/: Cargo.toml
rust_core/src/: dynamics.rs  interpolation.rs  kinematics.rs  lib.rs
scripts/: check_local_only_workflows.py  setup_dev.py
src/opensim_models/: __init__.py  __main__.py  _messages.py  model_pack.py
src/opensim_models/exercises/: __init__.py  base.py  constants.py
src/opensim_models/optimization/: __init__.py  _barbell_objectives.py  _movement_objectives.py  _olympic_objectives.py  _types.py  exercise_objectives.py  objective_definitions.py  (+1 more)
tests/: test_local_only_workflows_policy.py  test_model_pack.py
tests/integration/: test_all_exercises_build.py  test_gait_integration.py  test_sit_to_stand_integration.py
tests/parity/: test_parity_compliance.py
tests/unit/: test_benchmarks.py  test_cli.py  test_edge_cases.py  test_hypothesis.py  test_limb_builders.py  test_trajectory_optimizer.py
(+68 files in other folders)
