[package]
name = "opensim_models_core"
version = "0.1.0"
edition = "2021"
description = "Rust accelerator for OpenSim Models: parallel inverse dynamics, COM, and phase interpolation"
license = "MIT"

[lib]
name = "opensim_models_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
ndarray = "0.17"
rayon = "1.10"
